updated styles.css and cleaned up html.index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<link href="styles.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/styles.css">
 
 </head>
 
@@ -45,8 +45,8 @@
 
 	<section class="features">
 	
-	<h2>Features section header</h2>
-	<h4>Features section sub-header</h4>
+	<h2>section header</h2>
+	
 	
 	<aside>
 	
@@ -71,36 +71,8 @@
 	
 	</section>
 
-	<section class="organize">
 	
-		<div class="container">
-		
-			<img src="http://placehold.it/440x225">
-			
-			<div class="organizecontent">
-			
-			<h2>Organize headline</h2>
-			
-			<p>test</p>
-			
-			</div>
 	
-		</div>
-	
-	</section>
-	
-	<section class="share">
-			
-			<div class="sharecontent">
-			
-			<h2>Share headline</h2>
-			
-			<p>Test</p>
-			</div>
-			
-			<img src="http://placehold.it/440x225">
-	
-	</section>	
 	
 	<section class="get">
 	
