added script.js file and added to index.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
 	
 	</section>
 
-	<footer><div class="container">Built with HTML5 & CSS3</div></footer>
+	<footer>
+		<p>Copyright &copy; <span id="copyright"></span> | 
+		ALPS IT Solutions</a></p> 
+	</footer>
+	<script src="script.js"></script>
 
 </body>
 </html>
