--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			
 			<nav><ul><li><a href="#">Link 1</a></li><li><a href="#">Link 2</a></li><li><a href="#">Link 3</a></li></ul></nav>
 			
-			<div class="button floatright"><a href="#">Button</a></div>
+			<!-- <div class="button floatright"><a href="#">Button</a></div> -->
 		
 		</div>
 		
