added images and updated styles.css

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 		
 	</header>
 
-	<section class="hero">
+	<section class="art">
 	
 		<div class="container">
 		
-		<img src="http://placehold.it/480x380" class="heroimage">
+		<img src="images/blue-and-yellow-painting.jpg" class="artimage">
 		
-		<div class="herocontent">
+		<div class="artcontent">
 		
-			<h1>ACM Creations</h1>
+			<h1>PiecesByAnastasia</h1>
 			
-			<p>Test</p>
+			<p>One of a kind pieces hand made by Anastasia</p>
 			
 			<div class="button"><a href="#">Button</a></div>
 		
@@ -45,26 +45,26 @@
 
 	<section class="features">
 	
-	<h2>section header</h2>
+	<h2>Creations</h2>
 	
 	
 	<aside>
 	
-		<img src="http://placehold.it/285x150">
+		<img src="images/Blue-flowers.jpg">
 		<h3>Paintings</h3>
 	
 	</aside>
 	
 	<aside>
 	
-		<img src="http://placehold.it/285x150">
+		<img src="images/Kiss.jpg">
 		<h3>Shirts</h3>
 	
 	</aside>
 	
 	<aside>
 	
-		<img src="http://placehold.it/285x150">
+		<img src="images/Blue-flowers.jpg">
 		<h3>Jewelry</h3>
 	
 	</aside>
